Refactors and README update